[package]
name = "gigabiblicalrustamogapxyoboogaloo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
image = "0.24"
actix-multipart = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
